[package]
name = "trusted_chunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# prusti-contracts = { git = "https://github.com/viperproject/prusti-dev.git" }
prusti-contracts = "^0.1"
cfg-if = "1.0.0"
spin = "0.9.4"

# range_inclusive = {git = "https://github.com/Ramla-I/range_inclusive"}
# memory_structs = { path = "../../kernel/memory_structs"}
# unique_trait = { path = "../../kernel/unique_trait"}

[features]
default = []
std = []